# agent-clyde

./: .gitignore  CLYDE.md  LICENSE  README.md  clyde.example.json  pyproject.toml
clyde/: __init__.py  __main__.py  agent.py  api.py  config.py  history.py  hooks.py  main.py  message.py  models.py  plugins.py  render.py  session.py  system.py
clyde/memory/: __init__.py  store.py
clyde/tools/: __init__.py  base.py  bash.py  defaults.py  executor.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  permissions.py  registry.py  todo.py  web_fetch.py  web_search.py
tests/: test_core.py
